--- a/_includes/header.html
+++ b/_includes/header.html
@@ -5,9 +5,9 @@
 
         <a class="site-title" href="{{ "/" | relative_url }}">{{ site.title | escape }}</a>
 
-        <nav class="site-nav">
-            <a class="page-link" href="{{ "/blog" | relative_url }}">Blog</a>
-        </nav>
+        <!--<nav class="site-nav">-->
+            <!--<a class="page-link" href="{{ "/blog" | relative_url }}">Blog</a>-->
+        <!--</nav>-->
         <nav class="site-nav">
             <a class="page-link" href="{{ "/resume" | relative_url }}">Resume</a>
         </nav>
