--- a/assets/css/custom.css
+++ b/assets/css/custom.css
@@ -123,7 +123,7 @@ a.post-github:hover {
 }
 
 .site-title {
-  color: #FFF !important;
+  color: #fff !important;
   float: none;
 }
 .site-title:hover {
@@ -139,7 +139,7 @@ a.post-github:hover {
 
 
 .page-link {
-  color: #FFF !important;
+  color: #fff !important;
 }
 
 @-webkit-keyframes sk-bounce {
