--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -10,6 +10,12 @@
     <main class="page-content" aria-label="Content">
       <div class="wrapper">
         <div class="home">
+
+          <div>
+            {{ content }}
+          </div>
+
+
           <ul class="post-list">
             {% for post in site.posts %}
               <li>
