--- a/_layouts/blog.html
+++ b/_layouts/blog.html
@@ -18,6 +18,7 @@
 
           <ul class="post-list">
             {% for post in site.posts %}
+              {% if post.show_in_blog %}
               <li>
                 <span class="post-meta post-metadata">
                   <div class="post-date">{{ post.date | date: "%b %-d, %Y" }}</div>
@@ -51,6 +52,7 @@
 
                 </a>
               </li>
+              {% endif %}
             {% endfor %}
           </ul>
 
